Fixed overflow for code editor

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -166,7 +166,7 @@ select {
 	flex-direction: row;
 	position: relative;
 	height: 100%;
-	overflow: scroll;
+	overflow-x: hidden;
 }
 
 #codeMirror {
